# docker-ludwig-gpu

./: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  dockerhub-description.yml  publish.yml
