[tool.poetry]
name = "ludwig-gpu-jupyter"
version = "0.1.0"
description = ""
authors = ["WOGRA AG"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ludwig = "^0.6.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.jupyter.dependencies]
jupyterhub = "2.3.1"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
